fixed p width on mobile

--- a/abantudev/src/styles/home.scss
+++ b/abantudev/src/styles/home.scss
@@ -67,6 +67,13 @@
             width: 50%;
             margin: 0 auto;
             line-height: 1.5rem;
+            @media only screen and (max-width: 600px) {
+                width: 90%;
+  
+            }
+            @media screen and (min-width: 600px) and (max-width: 768px) { 
+                width: 90%;
+            }
         }
 
     }
